fix button text overflow on tiny screen; minor css changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -198,7 +198,7 @@ button#back {
   border: 1px solid #0099ff;
   border-radius: 5px;
   margin: 0.5em;
-  background-color: #696969;
+  background-color: #000f19;
   flex: 1 1 47%;
   justify-content: center;
   box-shadow: inset 0px 0px 8px 2px #0099ff88;
@@ -268,6 +268,7 @@ li:first-of-type {
   max-width: 420px;
   margin: 0 auto;
 }
+
 .airport {
   max-width: 100%;
 }
@@ -333,4 +334,14 @@ li:first-of-type {
 .legend-trail {
   font-size: 0.75rem;
   color: #0099ff;
+}
+
+@media (max-width: 620px) {
+  #answer button {
+    font-size: 1rem;
+  }
+
+  #question {
+    min-height: 0;
+  }
 }
